:sparkles: feat: 自动下注前置提取有效用户优化